# twitter

./: pyproject.toml
back-end/: db.sqlite3  manage.py  pyproject.toml
back-end/backend/: apps.py
back-end/serializer/: serializer.py
back-end/twitter_login/: settings.py  urls.py  wsgi.py
back-end/usuarios/: serializers.py  urls.py  views.py
back-end/view/: views.py
front-end/: package-lock.json  package.json
front-end/src/: App.tsx  styles.ts
front-end/src/Cadastrado/: index.tsx  styles.ts
front-end/src/Home/: index.tsx  styles.ts
front-end/src/Login/: index.tsx  styles.ts
